# DS-2026

./: .gitignore  README.md  pyproject.toml
configs/: icde_experiments.yaml
data/Centralized_Compas/: compas_scalers.p  compas_scalers_old.p
data/Centralized_Compas/node_1/: compas_shap_age_test_idx.npy  compas_shap_age_train.npy  compas_shap_age_train_idx.npy  compas_shap_gender_test_idx.npy  compas_shap_gender_train.npy  compas_shap_gender_train_idx.npy
data/Centralized_MEP/: mep_scalers.p  mep_scalers_old.p
data/Centralized_MEP/node_1/: mep_shap_marital_test_idx.npy  mep_shap_marital_train.npy  mep_shap_marital_train_idx.npy  mep_shap_race_test_idx.npy  mep_shap_race_train.npy  (+1 more)
data/Education/: education_scalers.p
data/Folktables_binary/: folktables_binary_scalers.p  folktables_binary_scalers_old.p
data/Income_3/: income_3_scalers.p
src/: compute_explanations.py  compute_xai_metrics.py  create_test_subsets.py  experiment_utils.py  export_black_box_predictions.py  main.py  stability_utils.py  train_fastshap.py
src/architectures/: __init__.py  mlp_xai.py
src/builder/: __init__.py  base_builder.py  fairlab_builder.py
src/dataloaders/: data_loader.py
src/fastshap/: __init__.py  fastshap.py  surrogate.py  utils.py
src/loggers/: file_logger.py  wandb_logger.py
src/metrics/: __init__.py  fairness.py
src/privacy/: privacy_wrapper.py
src/runs/: __init__.py  base_run.py
src/surrogates/: __init__.py  differentiable_performance.py  wasserstein.py
src/wrappers/: __init__.py  local_learner.py  orchestrator.py  orchestrator_wrapper.py  subproblem_config.py
(+35 files in other folders)
