[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairxai-icde"
version = "0.1.0"
description = "FairLab training and explanation-quality gap experiments for tabular fairness-aware classifiers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "category-encoders>=2.6",
    "click>=8.1",
    "entmax>=1.3",
    "lime>=0.2.0.1",
    "numpy>=1.24",
    "opacus>=1.4",
    "pandas>=2.0",
    "quantus>=0.5",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "shap>=0.44",
    "torch>=2.1",
    "torchmetrics>=1.2",
    "tqdm>=4.66",
    "wandb>=0.16",
]

[project.scripts]
fairlab-train = "main:main"
fairxai-export-bb = "export_black_box_predictions:main"
fairxai-train-fastshap = "train_fastshap:main"
fairxai-create-test-subsets = "create_test_subsets:main"
fairxai-compute-explanations = "compute_explanations:main"
fairxai-compute-metrics = "compute_xai_metrics:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "compute_explanations",
    "compute_xai_metrics",
    "create_test_subsets",
    "experiment_utils",
    "export_black_box_predictions",
    "main",
    "stability_utils",
    "train_fastshap",
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "architectures*",
    "builder*",
    "callbacks*",
    "dataloaders*",
    "exceptions*",
    "fastshap*",
    "loggers*",
    "metrics*",
    "privacy*",
    "runs*",
    "surrogates*",
    "wrappers*",
]
